# KS0555-Steam-Deck-Controller

./: .dockerignore  .gitignore  .npmrc  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  build-steamdeck.sh  justfile  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  smoke-test-dev.sh  turbo.json  upgrade-robot-controller.sh
.github/: release-please-config.json
.husky/: commit-msg  pre-commit
.planning/: PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
apps/frontend/src-tauri/: ARCHITECTURE.md  Cargo.toml  tauri.conf.json
apps/frontend/src-tauri/capabilities/: main.json
apps/frontend/src-tauri/permissions/: ble.toml  default.toml
apps/frontend/src-tauri/src/: lib.rs  main.rs
apps/frontend/src-tauri/src/adapters/: btleplug_adapter.rs  gilrs_adapter.rs  mod.rs  tauri_event_sink.rs
apps/frontend/src-tauri/src/ble/: mod.rs  state.rs
apps/frontend/src-tauri/src/domain/: direction.rs  invert.rs  mod.rs
apps/frontend/src-tauri/src/gamepad/: mod.rs
apps/frontend/src-tauri/src/ports/: bluetooth.rs  event_sink.rs  gamepad.rs  mod.rs
apps/frontend/src-tauri/tests/: ble_connect_test.rs  ble_disconnect_test.rs  ble_event_test.rs  ble_linux_filter_test.rs  ble_send_test.rs  ble_state_test.rs  domain_test.rs  flatpak_sandbox_test.rs  ports_test.rs  tauri_shell_test.rs  validation_test.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  RUNNING.md  STEAM_DECK.md  TESTING.md
flatpak/: Dockerfile  README.md  VALIDATION-CHECKLIST.md  docker-build.sh  (+3 more)
(+192 files in other folders)
