[package]
name = "robot-controller"
version = "0.1.0"
description = "Steam Deck Robot Controller - Tauri v2"
authors = ["KS0555"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.10.1", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = ["default", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# BLE communication (Phase 7)
btleplug = { version = "0.12.0", features = ["bluez"] }

# Gamepad input (Phase 8)
gilrs = "0.11.1"

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
